test/acceptance/validating/failing/submit-without-string-arg-without-find.spun
get "http://google.com"

submit
